--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "git.ignoreLimitWarning": true
-    
+    "git.ignoreLimitWarning": true,
+    "liveServer.settings.port": 5501
+    //Consolas, 'Courier New', monospace
 }
